--- a/StudyRingMeteor/styles.styl
+++ b/StudyRingMeteor/styles.styl
@@ -273,19 +273,26 @@ input, select, textarea
         display flex
         justify-content space-between 
         list-style none
+    .user
+        color #FFF
+        text-decoration none
+        padding 10px 20px
+        text-align center
+        .avatar
+                display: block
+                margin: 0 auto
     a
         color #FFF
         text-decoration none
-        padding 20px 20px
+        padding 5px 5px
         display block
         text-align center
         trans()
         &:hover, &.active
             background purp 
     i
-        display block
-        font-size 2em
-        margin-bottom 10px 
+        font-size 1em
+        padding 0px 10px
     +above($med)
         height 100%
         z-index: z.mid
@@ -296,13 +303,13 @@ input, select, textarea
             display block
         shadow-level(-1)
         a
-            padding 20px 10px
+            padding 5px 5px
             &:hover, &.active
                 border-left 4px solid teal
     +above($large)
         width $side-nav-large
         a
-            padding 20px 20px
+            padding 5x 5px
             &:hover, &.active
                 border-left 10px solid teal
 
@@ -389,3 +396,4 @@ input, select, textarea
         left auto 
         a 
             color dark-purp
+
